<resources>
    <string name="app_name">Prayer Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="fajr">FAJR</string>
    <string name="sunrise">Sunrise</string>
    <string name="duhr">Duhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="your_location">Your Location</string>
    <string name="go_to_qibla">Show Qibla Direction On Map</string>
    <string name="can_not_get_direction">can not get direction</string>
    <string name="can_not_get_location">Can not get location</string>
    <string name="next_prayer">Next  Prayer</string>
    <string name="no_more_prayers_today">No more prayers today</string>
    <string name="time_left">Time Left: %1$s</string>
    <string name="can_not_get_the_data">Can not get the data</string>
    <string name="enable_location_services">enable location services</string>
</resources>