<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="12dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFajr"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fajr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFajrTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSunrise"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/sunrise" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSunriseTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDuhr"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/duhr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDuhrTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAsr"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/asr" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAsrTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMaghrib"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/maghrib" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMaghribTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIsha"
                style="@style/TextPrayerTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/isha" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIshaTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quick_sand_bold"
                android:gravity="end"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="12 AM" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>